feat: 管理员编辑与备忘录工作区改造
